--- a/.env
+++ b/.env
@@ -1,4 +1,4 @@
 PORT=5000
-MONGO_URL=mongodb+srv://chinh:chinh123@websitemusic.0cjbbpj.mongodb.net/?retryWrites=true&w=majority&appName=WebsiteMusic
+MONGO_URL=mongodb+srv://chinh:chinh123@websitemusic.0cjbbpj.mongodb.net/music_app?retryWrites=true&w=majority&appName=WebsiteMusic
 ACCESS_TOKEN_SECRET_SIGNATURE = 'KBgJwUETt4HeVD05WaXXI9V3JnwCVP'
 REFRESH_TOKEN_SECRET_SIGNATURE = 'fcCjhnpeopVn2Hg1jG75MUi62051yL'
