--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,7 @@
       "module": "commonjs",
       
       "esModuleInterop": true,
+      "allowSyntheticDefaultImports": true,
       "removeComments": true,
       "outDir": "./dist",
       "forceConsistentCasingInFileNames": true,
