--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,5 +8,9 @@
       "outDir": "./dist",
       "forceConsistentCasingInFileNames": true,
       "strict": true             
+  },
+  "scripts": {
+  "build": "tsc",
+  "start": "node dist/index.js"
   }
 }
