--- a/.env
+++ b/.env
@@ -7,3 +7,4 @@ CLOUDINARY_API_SECRET = WuBsECn3ljoDN0EqDjvPFJwl4SY
 YOUR_CLOUD_NAME = ddjlid2bh
 MAIL_USER=truonganhtung2023py@gmail.com
 MAIL_PASSWORD=hroz etwm kdpb ornd
+REDIS_URL = redis-cli --tls -u redis://default:AXe7AAIjcDEyZTAzOWE4NWQxMDA0MDMyOGQ5NTVmOTczN2ZkYmJlYXAxMA@humble-magpie-30651.upstash.io:6379
