--- a/render.yaml
+++ b/render.yaml
@@ -1,55 +1,53 @@
-# render.yaml
-# Phiên bản đã được sửa lỗi cú pháp hoàn chỉnh để deploy lên Render.
-
+# render.yaml (đã sửa)
 services:
-  # Dịch vụ 1: Redis Cache
-  - type: redis
+  # Dịch vụ 1: Redis (dùng keyvalue thay vì redis)
+  - type: keyvalue
     name: redis-cache
     plan: free
-    ipAllowList: [] # Cho phép mọi kết nối đến Redis (phù hợp cho gói miễn phí)
+    ipAllowList: []   # cho phép nội bộ, chặn ngoài Internet (đúng yêu cầu keyvalue)
 
-  # Dịch vụ 2: Backend NodeJS
+  # Dịch vụ 2: Backend NodeJS (Dockerfile)
   - type: web
     name: music-backend-nodejs
-    env: docker
-    rootDir: . 
-    dockerfilePath: ./Dockerfile 
+    runtime: docker             # <-- Đổi từ env: docker -> runtime: docker
+    rootDir: .
+    dockerfilePath: ./Dockerfile
     envVars:
       - key: PORT
         value: 5000
       - key: REDIS_HOST
-        fromService: { type: redis, name: redis-cache, property: host }
+        fromService: { type: keyvalue, name: redis-cache, property: host }
       - key: REDIS_PORT
-        fromService: { type: redis, name: redis-cache, property: port }
+        fromService: { type: keyvalue, name: redis-cache, property: port }
       - key: RECOMMENDATION_API_URL
         value: "https://music-recommendation-python.onrender.com"
-      # Các biến môi trường bí mật (sẽ điền trên web Render)
       - key: MONGO_URI
         sync: false
       - key: ACCESS_TOKEN_SECRET
         sync: false
       - key: REFRESH_TOKEN_SECRET
         sync: false
-        
-  # Dịch vụ 3: Service Gợi ý Python
+
+  # Dịch vụ 3: Service gợi ý Python (Dockerfile)
   - type: web
     name: music-recommendation-python
-    env: docker
+    runtime: docker             # <-- Đổi từ env: docker -> runtime: docker
     rootDir: ./music-recommendation-service
     dockerfilePath: ./music-recommendation-service/Dockerfile
     envVars:
       - key: MONGO_URI
         sync: false
-      # "Mẹo" để Render tạo Deploy Hook URL
-      - key: RENDER_DISCOVERY 
+      - key: RENDER_DISCOVERY
         value: "true"
 
-  # Dịch vụ 4: Cron Job (ĐÃ SỬA LỖI: Bỏ runtime)
+  # Dịch vụ 4: Cron Job (cần runtime)
+  # Cách gọn nhất: dùng runtime=image + image curl chính chủ
   - type: cron
     name: daily-retrainer
-    schedule: "0 19 * * *" 
-    startCommand: "curl -X POST $DEPLOY_HOOK_URL"
+    runtime: image              # <-- THÊM runtime
+    image: curlimages/curl:8.6.0
+    schedule: "0 19 * * *"
+    dockerCommand: 'sh -c "curl -sS -X POST \"$DEPLOY_HOOK_URL\""'   # lệnh chạy theo lịch
     envVars:
       - key: DEPLOY_HOOK_URL
         sync: false
-
