--- a/render.yaml
+++ b/render.yaml
@@ -1,56 +1,55 @@
-# render.yaml (đã sửa)
+# render.yaml
+# Phiên bản đã được sửa lỗi cú pháp hoàn chỉnh để deploy lên Render.
+
 services:
-  # Dịch vụ 1: Redis (dùng keyvalue thay vì redis)
-  - type: keyvalue
+  # Dịch vụ 1: Redis Cache (Phải là type: redis)
+  - type: redis
     name: redis-cache
     plan: free
-    ipAllowList: []   # cho phép nội bộ, chặn ngoài Internet (đúng yêu cầu keyvalue)
+    ipAllowList: [] # Cho phép mọi kết nối đến Redis
 
-  # Dịch vụ 2: Backend NodeJS (Dockerfile)
+  # Dịch vụ 2: Backend NodeJS (Phải là env: docker)
   - type: web
     name: music-backend-nodejs
-    runtime: docker             # <-- Đổi từ env: docker -> runtime: docker
-    plan: free # <-- THÊM DÒNG NÀY
-    rootDir: .
-    dockerfilePath: ./Dockerfile
+    env: docker
+    plan: free
+    rootDir: . 
+    dockerfilePath: ./Dockerfile 
     envVars:
       - key: PORT
         value: 5000
       - key: REDIS_HOST
-        fromService: { type: keyvalue, name: redis-cache, property: host }
+        fromService: { type: redis, name: redis-cache, property: host }
       - key: REDIS_PORT
-        fromService: { type: keyvalue, name: redis-cache, property: port }
+        fromService: { type: redis, name: redis-cache, property: port }
       - key: RECOMMENDATION_API_URL
         value: "https://music-recommendation-python.onrender.com"
+      # Các biến môi trường bí mật
       - key: MONGO_URI
         sync: false
       - key: ACCESS_TOKEN_SECRET
         sync: false
       - key: REFRESH_TOKEN_SECRET
         sync: false
-
-  # Dịch vụ 3: Service gợi ý Python (Dockerfile)
+        
+  # Dịch vụ 3: Service Gợi ý Python (Phải là env: docker)
   - type: web
     name: music-recommendation-python
-    runtime: docker             # <-- Đổi từ env: docker -> runtime: docker
-    plan: free # <-- THÊM DÒNG NÀY
+    env: docker
+    plan: free
     rootDir: ./music-recommendation-service
     dockerfilePath: ./music-recommendation-service/Dockerfile
     envVars:
       - key: MONGO_URI
         sync: false
-      - key: RENDER_DISCOVERY
+      - key: RENDER_DISCOVERY 
         value: "true"
 
-  # Dịch vụ 4: Cron Job
+  # Dịch vụ 4: Cron Job (Đã sửa lỗi, bỏ plan và runtime)
   - type: cron
     name: daily-retrainer
-    plan: free # <-- THÊM DÒNG NÀY
-    runtime: image
-    image:
-      url: curlimages/curl:8.6.0      # <-- phải là object với key "url"
-    schedule: "0 19 * * *"
-    dockerCommand: 'sh -c "curl -sS -X POST \"$DEPLOY_HOOK_URL\""'  # lệnh chạy theo lịch
+    schedule: "0 19 * * *" 
+    startCommand: "curl -X POST $DEPLOY_HOOK_URL"
     envVars:
       - key: DEPLOY_HOOK_URL
         sync: false
